--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -6,7 +6,7 @@ header {
 
   .authentication {
     height: 35px;
-    padding: 10px 30px 40px 0;
+    padding: 10px 30px 25px 0;
     font-family: $primary-ff;
 
     p {
