--- a/styles/_intuit-logo.scss
+++ b/styles/_intuit-logo.scss
@@ -6,7 +6,7 @@
   margin: 0 auto;
   text-align: center;
 
-  img {
+  img { 
     @media screen and (min-width: 320px) {
       width: 100%;
       margin-top: 10px;
@@ -14,6 +14,7 @@
 
     @media screen and (min-width: 768px) {
       width: 375px;
+      margin: 0;
     }
   }
 }
