--- a/styles/_sign-in-form.scss
+++ b/styles/_sign-in-form.scss
@@ -97,14 +97,6 @@
         @media screen and (min-width: 375px) {
           left: 24%;
         }
-
-        @media screen and (min-width: 414px){
-          left: 27%;
-        }
-
-        @media screen and (min-width: 768px) {
-          left: 24%;
-        }
       }
     } // end of create-button
 
@@ -120,6 +112,13 @@
 
   @media screen and (min-width: 320px){
     width: 100%;
+    border-right: 0;
+    border-left: 0;
+  }
+
+  @media screen and (min-width: 414px) {
+    width: 90%;
+    border: 1px solid #C1C5C8;
   }
 
   @media screen and (min-width: 768px) {
